--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ name = "settings_path"
 version = "0.1.0"
 authors = ["f3kilo <f3kilo@yandex.ru>"]
 edition = "2018"
-repository = "https://github.com/F3kilo/easy_graph.git"
-description = "Data structure that represent generic vertices and undirected connections"
+repository = "https://github.com/F3kilo/settings_path.git"
+description = "Simple crate to easy select path for program settings"
 license = "MIT"
 readme = "README.md"
 
